tests/error/undefined_name.ca

f = ->
  add(a b c)

int = make_stack(f)
int.run
assert(int.errored)
